--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ nav {
   font-size: 20px;
   color: #1b424c;
 }
+
 .navlinks {
   height: 64px;
   margin-top: 0px;
@@ -55,7 +56,7 @@ nav {
   }
   
 
-#links {
+#cards_with_links {
   background-image: linear-gradient(to right, rgba(80, 172, 151, 0.3), white);
 }
 
