--- a/styles.css
+++ b/styles.css
@@ -99,8 +99,9 @@ footer {
   width: 100%;
     position: fixed;
     overflow: auto;
-    z-index: 2;
+    z-index: 1;
     bottom: 0;
+    
 }
 
 h6 {
@@ -122,7 +123,6 @@ h6 {
 
 .card {
     overflow: hidden;
-  /*border-radius: 10px !important;*/
 }
 
 .imageincards {
@@ -165,49 +165,50 @@ h6 {
   font-family: "DM Sans";
 }
 
-#heading_feedback
-{  color: #1b424c;
+#heading_feedback {  
+  color: #1b424c;
   text-align: left;
   margin-left: 200px;
   font-size: 40;
   font-family: raleway;
-  margin-top: 100px;}
+  margin-top: 100px;
+}
 
-  #form_image
-  {margin-left: 200px;
-  float: left;}
+#form_image {
+  margin-left: 200px;
+  float: left;
+}
   
-  #form_area{
-    margin-top: 100px;
-    float:right;
-    margin-right:200px;
-    padding: 50px;
-    background-color: white;
-    border-radius: 10px;
-  }
+#form_area { 
+  margin-top: 100px;
+  float:right;
+  margin-right:200px;
+  padding: 50px;
+  background-color: white;
+  border-radius: 10px;
+}
 
-  #form_name, #form_email, #form_message{
-    border: 1px solid black;
-    border-radius: 15px;
-    width: 395px;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-  }
+#form_name, #form_email, #form_message { 
+  border: 1px solid black;
+  border-radius: 15px;
+  width: 395px;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
 
-  
-  #form_message{
-    height: 100px;
-  }
+#form_message {
+  height: 100px;
+}
 
-  .text_style{
-    color:black;
-    font-size: 16px;
-    font-family: raleway;
-  }
+.text_style {
+  color:black;
+  font-size: 16px;
+  font-family: raleway;
+}
 
-  #form_button 
-  {color:white;
+#form_button {
+  color:white;
   background-color: #2A6877;
   height:48px;
   width:125px;
@@ -215,11 +216,8 @@ h6 {
   font-family:"DM Sans";
 }
 
-#center_button{
+#center_button {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
-
-
