fixed footer positioning

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 body {
   background-image: linear-gradient(to right, rgba(80, 172, 151, 0.3), white);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 #start_page {
@@ -82,6 +85,7 @@ nav {
 .arrow {
   padding-top: 6px;
 }
+
 div.content>ul>li {
   list-style: disc;
   margin-left: 16px;
@@ -96,10 +100,15 @@ div.content>ul>li>ul>li {
 
 footer {
   width: 100%;
-  overflow: auto;
-  z-index: 1;
   bottom: 0;
+  margin-top: auto; 
 }
+
+#filler {
+  flex: 1;
+  background-image: linear-gradient(to right, rgba(80, 172, 151, 0.3), white);
+}
+
 
 h6 {
   color: antiquewhite;
